--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -32,6 +32,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+  height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -42,11 +49,16 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  line-height: 1.5;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .wrapper {
   display: flex;
   min-height: 100vh;
+  width: 100%;
+  position: relative;
 }
 
 /* Animations */
